--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "ag-grid-community": "^28.2.1",
+    "ag-grid-react": "^28.2.1",
     "gray-matter": "^4.0.3",
     "next": "latest",
     "react": "18.2.0",
